# Analyzing-VAR-footage-with-LLMs

./: .gitignore  README.md  pyproject.toml
src/: main.py  prompt.py  transform_pdf_to_txt.py  utils.py
